src/App.css
/* ... */
@font-face {
  font-family: Centra;
  src: url(./assets/font/CentraNo2-Book.ttf);
  font-weight: 400;
}

/* Default CSS */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
  scroll-padding-top: 75px;
}

body {
  font-weight: 400;
  overflow-x: hidden;
  position: relative;
  background-color: #121212 !important;
  color: #fff !important;
  font-family: "Centra", sans-serif !important;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
  padding: 0;
  line-height: normal;
}

p,
a,
li,
button,
ul {
  margin: 0;
  padding: 0;
  line-height: 0;
  text-decoration: none;
}

a:hover {
  text-decoration: none;
}

img {
  width: 100%;
  height: auto;
}

button {
  border: 0;
  background-color: transparent;
}

input:focus,
textarea:focus,
select:focus {
  outline: none;
}

@media (min-width: 1700px) {
  main .container {
    max-width: 100%;
    padding: 0 150px;
  }
}

p.success {
  color: green;
}
p.danger {
  color: red;
}

/****** Navbar Css ******/

.nav {
  height: 80px;
  margin-top: -80px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.1rem;
  position: sticky;
  top: 0;
  z-index: 9999;
  @media screen and (max-width: 960px) {
    transition: 0.8 all ease;
  }
}
.nav-container {
  display: flex;
  justify-content: space-between;
  height: 80px;
  z-index: 9999;
  width: 100%;
  padding: 0 24px;
  max-width: 1100px;
}
.nav-logo {
  color: #fff;
  justify-self: flex-start;
  cursor: pointer;
  font-size: 1.8rem;
  display: flex;
  align-items: center;
  margin-left: 24px;
  font-weight: bold;
  text-decoration: none;
}
.mobile-icon {
  display: none;
  @media screen and (max-width: 768px) {
    display: block;
    position: absolute;
    top: -10px;
    right: 0;
    transform: translate(-100%, 60%);
    font-size: 1.8rem;
    cursor: pointer;
    color: #fff;
  }
}
.nav-menu {
  display: flex;
  align-items: center;
  list-style: none;
  text-align: center;
  margin-right: -22px;
  @media screen and (max-width: 768px) {
    display: none;
  }
}
.custom-nav-item {
  height: 80px;
}
.custom-nav-link {
  color: #fff;
  display: flex;
  align-items: center;
  text-decoration: none;
  padding: 0 1rem;
  height: 100%;
  cursor: pointer;

  &.active {
    border-bottom: 3px solid #4e54c8;
  }
}
.custom-nav-btn {
  display: flex;
  align-items: center;
  @media screen and (max-width: 768px) {
    display: none;
  }
}
.custom-nav-btn-link {
  text-decoration: none;
  font-weight: 700;
  color: #fff;
  border: 1px solid #fff;
  padding: 25px 34px;
  font-size: 18px;
  margin-left: 18px;
  position: relative;
  background-color: transparent;
  transition: 0.3s ease-in-out;
  cursor: pointer;
}
.custom-nav-btn-link::before {
  content: "";
  width: 0%;
  height: 100%;
  position: absolute;
  background-color: #fff;
  left: 0;
  top: 0;
  z-index: -1;
  transition: 0.3s ease-in-out;
}
.custom-nav-btn-link:hover {
  color: #121212;
}
.custom-nav-btn-link:hover::before {
  content: "";
  width: 100%;
  height: 100%;
  position: absolute;
}
.toggle-menu-container {
  position: fixed;
  z-index: 9999;
  width: 100%;
  height: 100%;
  background: #262626;
  display: grid;
  align-items: center;
  top: 0;
  left: 0;
  transition: 0.3s ease-in-out;
}
.toggle-menu-wrapper {
  color: #fff;
}
.close-icon {
  position: absolute;
  top: 1.2rem;
  right: 1.5rem;
  background: transparent;
  cursor: pointer;
  font-size: 2rem;
  outline: none;
}
.toggle-menu {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: repeat(6, 80px);
  text-align: center;
  @media screen and (max-width: 480px) {
    grid-template-rows: repeat(6, 60px);
  }
}
.toggle-menu-link {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 1.5rem;
  text-decoration: none;
  list-style: none;
  transition: 0.2s ease-in-out;
  color: #fff;
  cursor: pointer;
  &:hover {
    color: #4e54c8;
    transition: 0.2s ease-in-out;
  }
}
/****** Banner Css ******/
.banner {
  margin-top: 0;
  padding: 200px 0 50px 0;
  background-image: url("./assets/img/banner-bg.png");
  background-position: top center;
  background-size: cover;
  background-repeat: no-repeat;
  height: 100vh;
  @media screen and (max-width: 1400px) {
    padding: 70px 0 50px 0;
  }
}
.banner .tagline {
  font-weight: 700;
  letter-spacing: 0.8px;
  padding: 8px 10px;
  background: linear-gradient(to right, #4e54c8, #8f94fb);
  border: 1px solid rgba(255, 255, 255, 0.5);
  font-size: 20px;
  margin-bottom: 16px;
  display: inline-block;
}
.banner h1 {
  font-size: 65px;
  font-weight: 700;
  letter-spacing: 0.8px;
  line-height: 1;
  margin-bottom: 20px;
  display: block;
  @media screen and (max-width: 768px) {
    font-size: 30px;
    font-weight: 600;
    letter-spacing: 0.6px;
  }
}
.banner p {
  color: #b8b8b8;
  font-size: 18px;
  letter-spacing: 0.8px;
  line-height: 1.5em;
  text-align: justify;
  width: 96%;
  @media screen and (max-width: 768px) {
    font-size: 15px;
    letter-spacing: 0.6px;
    line-height: 1.2rem;
    margin-top: 20px;
  }
}
.banner button {
  color: #fff;
  font-weight: 700;
  font-size: 20px;
  margin-top: 60px;
  letter-spacing: 0.8px;
  display: flex;
  align-items: center;
}
.banner button svg {
  font-size: 25px;
  margin-left: 10px;
  transition: 0.3s ease-in-out;
  line-height: 1;
}
.banner button:hover svg {
  margin-left: 25px;
}
.txt-rotate > .wrap {
  border-right: 0.08em solid #666;
}

/****** Skills Css ******/
.skill {
  padding: 0 0 50px 0;
  position: relative;
}

.skill-bx {
  background: #151515;
  border-radius: 64px;
  text-align: center;
  padding: 60px 50px;
  margin-top: -60px;
}

.skill h2 {
  font-size: 45px;
  font-weight: 700;
}
.skill p {
  color: #b8b8b8;
  font-size: 18px;
  letter-spacing: 0.8px;
  line-height: 1.5em;
  margin: 14px 0 75px 0;
}
.skill-slider {
  width: 100%;
  margin: 0 auto;
  position: relative;
}
.skill-slider .item img {
  width: 50%;
  margin: 0 auto 15px auto;
}
/* ... */

